--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@reduxjs/toolkit": "^2.2.1",
     "aos": "^2.3.4",
     "firebase": "^10.8.1",
@@ -22,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
     "react-share": "^5.1.0",
     "react-toastify": "^10.0.4"
   },
@@ -31,7 +34,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
+    "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
